GPIB_lang_interfaces/C/GPIB.h



/* Address type (for 488.2 calls) */

typedef short Addr4882_t; /* System dependent: must be 16 bits */

/*
 *  Set up access to the user variables (ibsta, iberr, ibcnt, ibcntl).
 *  These are declared and exported by the 32-bit DLL.  Separate copies
 *  exist for each process that accesses the DLL.  They are shared by
 *  multiple threads of a single process.
 */

extern int  ibsta;

extern int  iberr;

extern int  ibcnt;

extern long ibcntl;
   #define ibfind ibfindW
   #define ibrdf  ibrdfW
   #define ibwrtf ibwrtfW
   #define ibfind ibfindA
   #define ibrdf  ibrdfA
   #define ibwrtf ibwrtfA


int __stdcall ibask    (int ud, int option, PINT v);

int __stdcall ibcac    (int ud, int v);

int __stdcall ibclr    (int ud);

int __stdcall ibcmd    (int ud, PVOID buf, long cnt);

int __stdcall ibcmda   (int ud, PVOID buf, long cnt);

int __stdcall ibconfig (int ud, int option, int v);

int __stdcall ibdev    (int boardID, int pad, int sad, int tmo, int eot, int eos);

int __stdcall ibdma    (int ud, int v);

int __stdcall ibeos    (int ud, int v);

int __stdcall ibeot    (int ud, int v);

int __stdcall ibgts    (int ud, int v);

int __stdcall ibist    (int ud, int v);

int __stdcall iblines  (int ud, PSHORT result);

int __stdcall ibln     (int ud, int pad, int sad, PSHORT listen);

int __stdcall ibloc    (int ud);

int __stdcall ibonl    (int ud, int v);

int __stdcall ibpad    (int ud, int v);

int __stdcall ibpct    (int ud);

int __stdcall ibppc    (int ud, int v);

int __stdcall ibrd     (int ud, PVOID buf, long cnt);

int __stdcall ibrda    (int ud, PVOID buf, long cnt);

int __stdcall ibrpp    (int ud, PCHAR ppr);

int __stdcall ibrsc    (int ud, int v);

int __stdcall ibrsp    (int ud, PCHAR spr);

int __stdcall ibrsv    (int ud, int v);

int __stdcall ibsad    (int ud, int v);

int __stdcall ibsic    (int ud);

int __stdcall ibsre    (int ud, int v);

int __stdcall ibstop   (int ud);

int __stdcall ibtmo    (int ud, int v);

int __stdcall ibtrg    (int ud);

int __stdcall ibwait   (int ud, int mask);

int __stdcall ibwrt    (int ud, PVOID buf, long cnt);

int __stdcall ibwrta   (int ud, PVOID buf, long cnt);



/**************************************************************************/
/*  Functions to access Thread-Specific copies of the GPIB global vars */

int  __stdcall ThreadIbsta  (void);

int  __stdcall ThreadIberr  (void);

int  __stdcall ThreadIbcnt  (void);

long __stdcall ThreadIbcntl (void);



/**************************************************************************/
/*  Function Prototypes  */

void __stdcall AllSpoll      (int boardID, Addr4882_t * addrlist, PSHORT results);

void __stdcall DevClear      (int boardID, Addr4882_t addr);

void __stdcall DevClearList  (int boardID, Addr4882_t * addrlist);

void __stdcall EnableLocal   (int boardID, Addr4882_t * addrlist);

void __stdcall EnableRemote  (int boardID, Addr4882_t * addrlist);

void __stdcall FindLstn      (int boardID, Addr4882_t * addrlist, Addr4882_t * results, int limit);

void __stdcall FindRQS       (int boardID, Addr4882_t * addrlist, PSHORT dev_stat);

void __stdcall PPoll         (int boardID, PSHORT result);

void __stdcall PPollConfig   (int boardID, Addr4882_t addr, int dataLine, int lineSense);

void __stdcall PPollUnconfig (int boardID, Addr4882_t * addrlist);

void __stdcall PassControl   (int boardID, Addr4882_t addr);

void __stdcall RcvRespMsg    (int boardID, PVOID buffer, long cnt, int Termination);

void __stdcall ReadStatusByte(int boardID, Addr4882_t addr, PSHORT result);

void __stdcall Receive       (int boardID, Addr4882_t addr, PVOID buffer, long cnt, int Termination);

void __stdcall ReceiveSetup  (int boardID, Addr4882_t addr);

void __stdcall ResetSys      (int boardID, Addr4882_t * addrlist);

void __stdcall Send          (int boardID, Addr4882_t addr, PVOID databuf, long datacnt, int eotMode);

void __stdcall SendCmds      (int boardID, PVOID buffer, long cnt);

void __stdcall SendDataBytes (int boardID, PVOID buffer, long cnt, int eot_mode);

void __stdcall SendIFC       (int boardID);

void __stdcall SendLLO       (int boardID);

void __stdcall SendList      (int boardID, Addr4882_t * addrlist, PVOID databuf, long datacnt, int eotMode);

void __stdcall SendSetup     (int boardID, Addr4882_t * addrlist);

void __stdcall SetRWLS       (int boardID, Addr4882_t * addrlist);

void __stdcall TestSRQ       (int boardID, PSHORT result);

void __stdcall TestSys       (int boardID, Addr4882_t * addrlist, PSHORT results);

void __stdcall Trigger       (int boardID, Addr4882_t addr);

void __stdcall TriggerList   (int boardID, Addr4882_t * addrlist);

void __stdcall WaitSRQ       (int boardID, PSHORT result);