GPIB_lang_interfaces/Delphi/GPIB.PAS


    (* Get the addresses of the GPIB 488.2 routines *)
    @AllSpoll32       := GetProcAddress(Gpib32Lib, 'AllSpoll');
    @DevClear32       := GetProcAddress(Gpib32Lib, 'DevClear');
    @DevClearList32   := GetProcAddress(Gpib32Lib, 'DevClearList');
    @EnableLocal32    := GetProcAddress(Gpib32Lib, 'EnableLocal');
    @EnableRemote32   := GetProcAddress(Gpib32Lib, 'EnableRemote');
    @FindLstn32       := GetProcAddress(Gpib32Lib, 'FindLstn');
    @FindRQS32        := GetProcAddress(Gpib32Lib, 'FindRQS');
    @PassControl32    := GetProcAddress(Gpib32Lib, 'PassControl');
    @PPoll32          := GetProcAddress(Gpib32Lib, 'PPoll');
    @PPollConfig32    := GetProcAddress(Gpib32Lib, 'PPollConfig');
    @PPollUnconfig32  := GetProcAddress(Gpib32Lib, 'PPollUnconfig');
    @RcvRespMsg32     := GetProcAddress(Gpib32Lib, 'RcvRespMsg');
    @ReadStatusByte32 := GetProcAddress(Gpib32Lib, 'ReadStatusByte');
    @Receive32        := GetProcAddress(Gpib32Lib, 'Receive');
    @ReceiveSetup32   := GetProcAddress(Gpib32Lib, 'ReceiveSetup');
    @ResetSys32       := GetProcAddress(Gpib32Lib, 'ResetSys');
    @Send32           := GetProcAddress(Gpib32Lib, 'Send');
    @SendCmds32       := GetProcAddress(Gpib32Lib, 'SendCmds');
    @SendDataBytes32  := GetProcAddress(Gpib32Lib, 'SendDataBytes');
    @SendIFC32        := GetProcAddress(Gpib32Lib, 'SendIFC');
    @SendList32       := GetProcAddress(Gpib32Lib, 'SendList');
    @SendLLO32        := GetProcAddress(Gpib32Lib, 'SendLLO');
    @SendSetup32      := GetProcAddress(Gpib32Lib, 'SendSetup');
    @SetRWLS32        := GetProcAddress(Gpib32Lib, 'SetRWLS');
    @TestSRQ32        := GetProcAddress(Gpib32Lib, 'TestSRQ');
    @TestSys32        := GetProcAddress(Gpib32Lib, 'TestSys');
    @Trigger32        := GetProcAddress(Gpib32Lib, 'Trigger');
    @TriggerList32    := GetProcAddress(Gpib32Lib, 'TriggerList');
    @WaitSRQ32        := GetProcAddress(Gpib32Lib, 'WaitSRQ');

    (* Get the addresses of the GPIB multithreaded functions. *)
    @ThreadIbsta32    := GetProcAddress(Gpib32Lib, 'ThreadIbsta');
    @ThreadIberr32    := GetProcAddress(Gpib32Lib, 'ThreadIberr');
    @ThreadIbcnt32    := GetProcAddress(Gpib32Lib, 'ThreadIbcnt');
    @ThreadIbcntl32   := GetProcAddress(Gpib32Lib, 'ThreadIbcntl');

  (* Verify that addresses were obtained. If unable to get any one of
     the addresses, then free the library, display an error message and
     HALT the program. *)
    if (Pibsta            = NIL) Or
       (Piberr            = NIL) Or
       (Pibcnt            = NIL) Or
       (Pibcntl           = NIL) Or
       (@ibask32          = NIL) Or
       (@ibcac32          = NIL) Or
       (@ibclr32          = NIL) Or
       (@ibcmd32          = NIL) Or
       (@ibcmda32         = NIL) Or
       (@ibconfig32       = NIL) Or
       (@ibdev32          = NIL) Or
       (@ibdma32          = NIL) Or
       (@ibeos32          = NIL) Or
       (@ibeot32          = NIL) Or
       (@ibfind32         = NIL) Or
       (@ibgts32          = NIL) Or
       (@ibist32          = NIL) Or
       (@iblck32          = NIL) Or
       (@iblines32        = NIL) Or
       (@ibln32           = NIL) Or
       (@ibloc32          = NIL) Or
       (@ibonl32          = NIL) Or
       (@ibnotify32       = NIL) Or
       (@ibpad32          = NIL) Or
       (@ibpct32          = NIL) Or
       (@ibppc32          = NIL) Or
       (@ibrd32           = NIL) Or
       (@ibrda32          = NIL) Or
       (@ibrdf32          = NIL) Or
       (@ibrpp32          = NIL) Or
       (@ibrsc32          = NIL) Or
       (@ibrsp32          = NIL) Or
       (@ibrsv32          = NIL) Or
       (@ibsad32          = NIL) Or
       (@ibsic32          = NIL) Or
       (@ibsre32          = NIL) Or
       (@ibstop32         = NIL) Or
       (@ibtmo32          = NIL) Or
       (@ibtrg32          = NIL) Or
       (@ibwait32         = NIL) Or
       (@ibwrt32          = NIL) Or
       (@ibwrta32         = NIL) Or
       (@ibwrtf32         = NIL) Or
       (@AllSpoll32       = NIL) Or
       (@DevClear32       = NIL) Or
       (@DevClearList32   = NIL) Or
       (@EnableLocal32    = NIL) Or
       (@EnableRemote32   = NIL) Or
       (@FindLstn32       = NIL) Or
       (@FindRQS32        = NIL) Or
       (@PassControl32    = NIL) Or
       (@PPoll32          = NIL) Or
       (@PPollConfig32    = NIL) Or
       (@PPollUnconfig32  = NIL) Or
       (@RcvRespMsg32     = NIL) Or
       (@ReadStatusByte32 = NIL) Or
       (@Receive32        = NIL) Or
       (@ReceiveSetup32   = NIL) Or
       (@ResetSys32       = NIL) Or
       (@Send32           = NIL) Or
       (@SendCmds32       = NIL) Or
       (@SendDataBytes32  = NIL) Or
       (@SendIFC32        = NIL) Or
       (@SendList32       = NIL) Or
       (@SendLLO32        = NIL) Or
       (@SendSetup32      = NIL) Or
       (@SetRWLS32        = NIL) Or
       (@TestSRQ32        = NIL) Or
       (@TestSys32        = NIL) Or
       (@Trigger32        = NIL) Or
       (@TriggerList32    = NIL) Or
       (@WaitSRQ32        = NIL) Or
       (@ThreadIbsta32    = NIL) Or
       (@ThreadIberr32    = NIL) Or
       (@ThreadIbcnt32    = NIL) Or
       (@ThreadIbcntl32   = NIL) Then
       Begin
         (* Free the GPIB library. *)
         FreeLibrary(Gpib32Lib);
         LoadDLL := -2;
         Exit;
       End;
       LoadDLL := 0;
  end;

(* =====================================================================
 *                      Procedure FreeDLL
 *         This procedure unloads the GPIB-32.DLL library.
 * ===================================================================== *)
function FreeDLL:integer;stdcall;
begin
  if Gpib32Lib = 0 then
    FreeDLL := -1
  else
  begin
     FreeLibrary(Gpib32Lib);
     FreeDLL := 0;
  end;
end;

function ibsta : integer; stdcall;
begin
     ibsta := Pibsta^;
end;

function iberr : integer; stdcall;
begin
     iberr := Piberr^;
end;

function ibcnt : integer; stdcall;
begin
     ibcnt := Pibcnt^;
end;

function ibcntl : longint; stdcall;
begin
     ibcntl := Pibcntl^;
end;

function ThreadIbsta : integer; stdcall;
begin
     ThreadIbsta := ThreadIbsta32;
end;

function ThreadIberr : integer; stdcall;
begin
     ThreadIberr := ThreadIberr32;
end;

function ThreadIbcnt : integer; stdcall;
begin
     ThreadIbcnt := ThreadIbcnt32;
end;

function ThreadIbcntl : longint; stdcall;
begin
     ThreadIbcntl := ThreadIbcntl32;
end;

function ibask(ud:integer;option:integer;var value:integer):integer;stdcall;
begin
     ibask := ibask32(ud, option, value);
end;

function ibcac(ud:integer;value:integer):integer;stdcall;
begin
     ibcac := ibcac32(ud, value);
end;

function ibclr(ud:integer):integer;stdcall;
begin
     ibclr := ibclr32(ud);
end;

function ibcmd(ud:integer;cmdbuf:string;count:longint):integer;stdcall;
begin
     ibcmd := ibcmd32(ud, cmdbuf, count);
end;

function ibcmda(ud:integer;cmdbuf:string;count:longint):integer;stdcall;
begin
     ibcmda := ibcmda32(ud, cmdbuf, count);
end;

function ibconfig(ud:integer;option:integer;value:integer):integer;stdcall;
begin
     ibconfig := ibconfig32(ud, option, value);
end;

function ibdev(ud:integer;pad:integer;sad:integer;tmo:integer;eot:integer;eos:integer):integer;stdcall;
begin
     ibdev := ibdev32(ud, pad, sad, tmo, eot, eos);
end;

function ibdma(ud:integer;value:integer):integer;stdcall;
begin
     ibdma := ibdma32(ud, value);
end;

function ibeos(ud:integer;value:integer):integer;stdcall;
begin
     ibeos := ibeos32(ud, value);
end;

function ibeot(ud:integer;value:integer):integer;stdcall;
begin
     ibeot := ibeot32(ud, value);
end;

function ibfind(udname:string):integer;stdcall;
begin
     ibfind := ibfind32(udname);
end;

function ibgts(ud:integer;value:integer):integer;stdcall;
begin
     ibgts := ibgts32(ud, value);
end;

function ibist(ud:integer;value:integer):integer;stdcall;
begin
     ibist := ibist32(ud, value);
end;

function iblck(ud:integer;value:integer;timeout:integer;reserved:string):integer;stdcall;
begin
     iblck := iblck32(ud, value, timeout, reserved);
end;

function iblines(ud:integer;var clines:smallint):integer;stdcall;
begin
     iblines := iblines32(ud, clines);
end;

function ibln(ud:integer;pad:integer;sad:integer;var listen:smallint):integer;stdcall;
begin
     ibln := ibln32(ud, pad, sad, listen);
end;

function ibloc(ud:integer):integer;stdcall;
begin
     ibloc := ibloc32(ud);
end;

function ibonl(ud:integer;value:integer):integer;stdcall;
begin
     ibonl := ibonl32(ud, value);
end;

function ibnotify(ud:integer;mask:integer;callback:GpibNotifyCallback_t;data:string):integer;stdcall;
begin
     ibnotify := ibnotify32(ud, mask, callback, data);
end;

function ibpad(ud:integer;value:integer):integer;stdcall;
begin
     ibpad := ibpad32(ud, value);
end;

function ibpct(ud:integer):integer;stdcall;
begin
     ibpct := ibpct32(ud);
end;

function ibppc(ud:integer;value:integer):integer;stdcall;
begin
     ibppc := ibppc32(ud, value);
end;

function ibrd(ud:integer;var  rdbuf;count: Longint):integer;stdcall;
begin
     ibrd := ibrd32(ud, rdbuf, count);
end;

function ibrda(ud:integer;var rdbuf;count:Longint):integer;stdcall;
begin
     ibrda := ibrda32(ud, rdbuf, count);
end;

function ibrdf(ud:integer;filename:string):integer;stdcall;
begin
     ibrdf := ibrdf32(ud, filename);
end;

function ibrpp(ud : integer; var ppr : short) : integer; stdcall;
begin
     ibrpp := ibrpp32(ud, ppr);
end;

function ibrsc(ud:integer;value:integer):integer;stdcall;
begin
     ibrsc := ibrsc32(ud, value);
end;

function ibrsp(ud:integer;var spr:smallint):integer;stdcall;
begin
     ibrsp := ibrsp32(ud, spr);
end;

function ibrsv(ud:integer;value:integer):integer;stdcall;
begin
     ibrsv := ibrsv32(ud, value);
end;

function ibsad(ud:integer;value:integer):integer;stdcall;
begin
     ibsad := ibsad32(ud, value);
end;

function ibsic(ud:integer):integer;stdcall;
begin
     ibsic := ibsic32(ud);
end;

function ibsre(ud:integer;value:integer):integer;stdcall;
begin
     ibsre := ibsre32(ud, value);
end;

function ibstop(ud:integer):integer;stdcall;
begin
     ibstop := ibstop32(ud);
end;

function ibtmo(ud:integer;value:integer):integer;stdcall;
begin
     ibtmo := ibtmo32(ud, value);
end;

function ibtrg(ud:integer):integer;stdcall;
begin
     ibtrg := ibtrg32(ud);
end;

function ibwait(ud:integer;mask:integer):integer;stdcall;
begin
     ibwait := ibwait32(ud, mask);
end;

function ibwrt(ud:integer;wrtbuf:string;count:longint):integer;stdcall;
begin
     ibwrt := ibwrt32(ud, wrtbuf, count);
end;

function ibwrta(ud:integer;wrtbuf:string;count:Longint):integer;stdcall;
begin
     ibwrta := ibwrta32(ud, wrtbuf, count);
end;

function ibwrtf(ud:integer;filename:string):integer;stdcall;
begin
     ibwrtf := ibwrtf32(ud, filename);
end;

procedure AllSpoll(boardID:integer;addrlist:AddrList4882_t;var resultlist:AddrList4882_t);stdcall;
begin
     AllSpoll32(boardID, addrlist, resultlist);
end;

procedure DevClear(boardID:integer;address:Addr4882_t);stdcall;
begin
     DevClear32(boardID, address);
end;

procedure DevClearList(boardID:integer;var addrlist:AddrList4882_t);stdcall;
begin
     DevClearList32(boardID, addrlist);
end;

procedure EnableLocal(boardID:integer;addrlist:AddrList4882_t);stdcall;
begin
     EnableLocal32(boardID, addrlist);
end;

procedure EnableRemote(boardID:integer;addrlist:AddrList4882_t);stdcall;
begin
     EnableRemote32(boardID, addrlist);
end;

procedure FindLstn(boardID:integer;var padlist:AddrList4882_t;var resultlist:AddrList4882_t;limit:integer);stdcall;
begin
     FindLstn32(boardID, padlist, resultlist, limit);
end;
